# machine_love

./: .gitignore  README.md  pyproject.toml
scripts/: render_attachment.py  render_gridworld.py  run_attachment_date.py  run_care.py  run_flourishing.py  run_knowledge.py  run_optimization.py  run_respect.py
scripts/plots/: plot_attachment.py  plot_flourishing.py  plot_knowledge.py  plot_optimization.py
src/maslow/: __init__.py  visualizer.py
src/maslow/experiments/: __init__.py  attachment.py  base.py  care.py  flourishing.py  knowledge.py  optimization.py  respect.py
src/maslow/gridworld/: __init__.py  attachment.py  base.py
src/maslow/lm/: __init__.py  base.py  openai_provider.py  prompts.py
src/maslow/utils/: __init__.py  stats.py
tests/: test_attachment_world.py  test_experiments.py  test_gridworld.py  test_lm_provider.py  test_prompts.py
