[project]
name = "maslow"
version = "0.1.0"
description = "Machine Love: Maslow Gridworld experiments with LLM-based care, respect, and attachment"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "seaborn",
    "openai>=1.0",
    "pygame",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maslow"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
